Code that never works

--- a/indexcopy.html
+++ b/indexcopy.html
@@ -4,9 +4,12 @@
          body { margin: 0; }
         </style>
     </head>
+    <div class="div-width">
+        <h2 id='output'></h2>
+    </div>
     <body>
         <script src="d3.min.js"></script>
         <script src="SAT.js"></script>
-        <script src="originalCopy.js"></script>
+        <script src="original.js"></script>
     </body>
 </html>
