--- a/index.html
+++ b/index.html
@@ -1,60 +1,46 @@
 <html>
-    <head>
-        <style>
-         body {
-           margin: 0;
-         }
-         .div-width{
-           width: 100%;
-           height: 50px;
-           margin-top: 50px;
-           text-align: center;
-         }
-         .nice-button{
-           width: 150px;
-           height: 50px;
-           border-radius: 12px;
-           color: white;
-           background-color: #5f42ff;
-           font-size: 30px;
-           border: none;
-         }
-         .display{
-           padding: 50px;
-         }
-        </style>
-    </head>
-    <body>
-      <div class="div-width">
-        <h2 id='output'></h2>
-      </div>
-      <div class="div-width">
-        <!-- <button onclick="exit()" class="nice-button">Done</button> -->
-      </div>
-      <div class="display">
-        <!-- <script src="d3.min.js"></script> -->
-        <script src="https://d3js.org/d3.v4.min.js"></script>
-        <!-- The thing for dragging but not for the prelim tests
-        <script src="https://d3js.org/d3-selection-multi.v1.min.js"></script> -->
+<head>
+    <style>
+    body {margin: 0;}
+    /* .div-width{
+        width: 100%;
+        height: 50px;
+        margin-top: 50px;
+        text-align: center;
+    }
+    .nice-button{
+        width: 150px;
+        height: 50px;
+        border-radius: 12px;
+        color: white;
+        background-color: #5f42ff;
+        font-size: 30px;
+        border: none;
+    }
+    .display{
+        padding: 50px;
+    } */
+    </style>
+</head>
+<div class="div-width">
+    <h2 id='output'></h2>
+</div>
 
-        <!-- <script src="d3.min.js"></script> -->
-        <script src="SAT.js"></script>
-        <script src="main-d3v4.js"></script>
-
-      </div>
-    </body>
-
-  <script>
-  function showCoords(evt){
+<body>
+    <script src="https://d3js.org/d3.v4.min.js"></script>
+    <script src="https://d3js.org/d3-selection-multi.v1.min.js"></script>
+    <!-- <script src="https://d3js.org/d3-drag.v1.min.js"></script> -->
+    <script src="SAT.js"></script>
+    <script src="main-d3v4.js"></script>
+</body>
+<script>
+function showCoords(evt){
     console.log(
-      "Mouse position: ",
-      "clientX value: " + evt.clientX + "\n" +
-      "clientY value: " + evt.clientY + "\n"
+        "Mouse position: ",
+        "clientX value: " + evt.clientX + "\n" +
+        "clientY value: " + evt.clientY + "\n"
     );
-  }
-  </script>
-  <body ondblclick="showCoords(event)">
-  </body>
-  <body onmouse="place(event)">
-  </body>
+}
+</script>
+<body ondblclick="showCoords(event)"></body>
 </html>
