--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
 </head>
 <div class="div-width">
     <h2 id='output'></h2>
+    <button type="button" onclick="start()">start/resume</button>
 </div>
 
 <body>
     <script src="https://d3js.org/d3.v4.min.js"></script>
     <script src="https://d3js.org/d3-selection-multi.v1.min.js"></script>
-    <!-- <script src="https://d3js.org/d3-drag.v1.min.js"></script> -->
     <script src="SAT.js"></script>
-    <script src="main-d3v4.js"></script>
+    <script src="mainWithTheDrag-d3v4.js"></script>
 </body>
 <script>
 function showCoords(evt){
