--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
 <div class="div-width">
     <h2 id='output'></h2>
     <button type="button" onclick="start()">start/resume</button>
+    <button type="button" onclick="reset()">reset</button>
+    <button type="button" onclick="start_animation()">start: animation (w/ drag)</button>
+    <button type="button" onclick="start_no_animation()">start: no animation</button>
 </div>
 
 <body>
