--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         </style>
     </head>
     <body>
-      <div class="whole">
+        <div class="whole">
         <div class="left">
           <div id="display"></div>
         </div>
@@ -73,8 +73,8 @@
             <button class="button" onclick="clickMe()">Click Me</button>
           </div>
         </div>
-      </div>
-
+        </div>
+        <button onclick="clickMe()">Click Me</button>
         <script src="d3.v4.min.js"></script>
         <script src="d3-selection-multi.v1.min.js"></script>
         <script src="SAT.js"></script>
