i'll figure out stash in a bit

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
     <body>
+        <canvas width="500" height="600"></canvas>
         <script src="SAT.js"></script>
         <script src="shape-definition.js"></script>
         <script src="shape-physics.js"></script>
