--- a/index.html
+++ b/index.html
@@ -1,9 +1,16 @@
 <html>
-    <body>
-        <canvas width="500" height="600"></canvas>
-        <script src="SAT.js"></script>
-        <script src="shape-definition.js"></script>
-        <script src="shape-physics.js"></script>
-        <script src="main.js"></script>
-    </body>
+
+<body>
+  <div id="cost" style="position: fixed; x:0; y: 0;"></div>
+  <div id="display"></div>
+
+  <!-- <canvas width="500" height="600"></canvas> -->
+  <script src="SAT.js"></script>
+  <script src="d3.v4.min.js"></script>
+  <script src="shape-definition.js"></script>
+  <script src="shape-physics.js"></script>
+  <script src="shape-animation.js"></script>
+  <script src="main.js"></script>
+</body>
+
 </html>
